# silver_editor

./: .gitignore  Cargo.toml  README.md  build.rs  package.json  test.d  test.js  test.wasm  tsconfig.json  webpack.config.js
.github/workflows/: auto_deploy.yml
build_in_event_types/: Cargo.toml
build_in_event_types/src/events/params/: add_rectangle.rs  basics.rs  image.rs
build_in_event_types/src/simple_drawable/: image.rs  mod.rs  rectangle.rs
editor/: Cargo.toml  Web.toml  build.rs  tsconfig.json  webpack.config.js
editor/examples/: simple_test.rs  test.rs
editor/js/: app.ts  event_stream.ts
editor/js/components/: basic_form.tsx  header.tsx
editor/js/editor/: basic_editor.tsx  color.tsx  image.tsx  menu.tsx  rectangle.tsx
editor/js/incoming_events/: event_stream.ts  incoming_events.ts
editor/src/: editor_context.rs
editor/src/events/: get_events_native.rs  get_events_web.rs  mod.rs  shared_event_logic.rs
editor/static/: index.html
event_types/: Cargo.toml
event_types/src/: events.rs  lib.rs  simple_drawable.rs
event_types/src/events/params/: add_rectangle.rs  image.rs  mod.rs
event_types/src/simple_drawable/: image.rs  rectangle.rs
examples/: test.rs
js/: app.ts  editor.tsx  events.ts
js/components/: basic_form.tsx  header.tsx
js/components.tsx/: basic_form.tsx
js/editor/: basic_editor.tsx  color.tsx  menu.tsx  rectangle.tsx
js/incoming_events/: incoming_events.ts  websocket_client.ts
json_schemas/: add_rectangle.json
plugin_api/: Cargo.toml
plugin_api/src/: lib.rs
src/: editor_context.rs  get_events_native.rs  get_events_web.rs  lib.rs
src/events/: event_params.rs  get_events_native.rs  get_events_web.rs  mod.rs  send_events.rs  shared_event_logic.rs
src/events/event_params/: add_rectangle.rs
static/: editor_index.html  editor_native.html  editor_wasm.html
