[package]
name = "silver_editor"
version = "0.1.0"
authors = ["lenscas <lenscas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicksilver = {version="0.4.0-alpha0.5", features=["stdweb"]}
mergui = "0.1.0-alpha0.5"
stdweb = "*"

[dev-dependencies]
silver_animation = "0.1.0-alpha0.3"