[package]
name = "silver_editor"
version = "0.1.0"
authors = ["lenscas <lenscas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicksilver = {version="0.4.0-alpha0.5", features=["stdweb"]}
mergui = "0.1.0-alpha0.5"
serde={version="1",features=["derive"]}
serde_json="1"
futures="0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
warp= "0.2"
tokio={version="0.2", features=["rt-threaded"]}

bytes="0.5"

[dev-dependencies]
silver_animation = "0.1.0-alpha0.3"
serde = {version="1", features=["derive"]}