[package]
name = "silver_editor_event_types"
version = "0.1.0"
authors = ["Casper <lenscas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicksilver = {version="0.4.0-alpha0.5"}
schemars = "0.8.0-alpha-4"
serde = {version="1", features=["derive"]}
serde_json = "1"
async-trait = "0.1.36"