[package]
name = "plugin_api"
version = "0.1.0"
authors = ["Casper <lenscas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.36"
quicksilver = {version="0.4.0-alpha0.5"}
serde = {version="1", features=["derive"]}
serde_json = "1"